tests/neg/i24460.check
-- Error: tests/neg/i24460.scala:12:20 ---------------------------------------------------------------------------------
 12 |  val _ = singletons[A, (A.A1.type, A.A2.type, A.A3.type)] // error
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |          cannot reduce summonFrom with
    |           patterns :  case given ev @ _:ValueOf[(test.A.A1 : test.A) & test.A]
    |-------------------------------------------------------------------------------------------------------------------
    |Inline stack trace
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    |This location contains code that was inlined from Predef.scala:151
151 |  inline def valueOf[T]: T = summonFrom {
    |                             ^
152 |    case ev: ValueOf[T] => ev.value
153 |  }
    |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
    |This location contains code that was inlined from Predef.scala:151
  7 |      case _: (h *: t) => valueOf[`h` & T] +: singletons[T, t]
    |                          ^^^^^^^^^^^^^^^^
     -------------------------------------------------------------------------------------------------------------------
